Add functions to scripts.js
Co-authored-by: Peter Vang <vang_peter06@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -10,44 +10,48 @@
 <body>
   <h1>Click the JavaScript and JQuery terms below to learn their definitions.</h1>
   <ul>
-    <li>JavaScript (JS)</li>
+    <div>
+      <li>JavaScript (JS)</li>
+    </div>
+    <div>
       <p>: an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
-    <li>Operators</li>
-      <p>: An operator is a special character (or characters) that indicates an action to be performed.</p>
-    <li>Variables</li>
-      <p>: Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.</p>
-    <li>Variable naming conventions</li>
-      <p>: a set of guidelines to follow when naming your variable.</p>
-    <li>Functions</li>
-      <p>:A function is a bundle of code that performs a set of procedures. </p>
-    <li>Methods</li>
-      <p>:  A method is a type of function. It is an action run on a piece of data; you can think of it as a message you send to a piece of data, and the result is the response.</p>
-    <li>Arguments</li>
-      <p>: Both functions and methods can have arguments. Arguments are passed into the parentheses ().</p>
-    <li>Parameters</li>
-      <p>: This is a placeholder variable that is included in a function definition. There is not value for parameters. Once the function is called, an argument is passed into the parameter and gives it a value.</p>
-    <li>Return</li>
-      <p>: The return value is the method's response.</p>
-    <li>Chaining methods</li>
-      <p>:is a programming strategy that simplifies and embellishes your code. It is a mechanism of calling a method on another method of the same object.</p>
-    <li>Strings</li>
-      <p>:is used for data values that are made up of ordered sequences of characters, such as "hello world". A string can contain any sequence of characters, visible or invisible, and characters may be repeated.</p>
-    <li>Booleans</li>
-      <p>:a logical data type that can have only the values true or false . For example, in JavaScript, Boolean conditionals are often used to decide which sections of code to execute (such as in if statements) or repeat (such as in for loops).</p>
-    <li>Undefined</li>
-      <p>:a condition where an expression does not have a correct value, although it is syntactically correct. An undefined value must not be confused with empty string, Boolean "false" or other "empty" (but defined) values.</p>
-    <li>NaN</li>
-      <p>:an undefined or unrepresentable value, especially in floating-point calculations. For example, 0/0 or the square root of a negative number would return a NaN result.</p>
-    <li>Null</li>
-      <p>:Null is a built-in constant that has a value of zero. It is the same as the character 0 used to terminate strings in C. Null can also be the value of a pointer, which is the same as zero unless the CPU supports a special bit pattern for a null pointer.</p>
-    <li>Alert</li>
-      <p>:a type of "pop-up" message to users of a script. An alert could be anything from notifying the user of an error to saying a short phrase such as "Hi". </p>
-    <li>Comments</li>
-      <p>:a text note added to source code to provide explanatory information, usually about the function of the code.</p>
-    <li>jQuery</li>
-      <p>:a concise and fast JavaScript library that can be used to simplify event handling, HTML document traversing, Ajax interactions and animation for speedy website development. </p>
-    <li>Attributes</li>
-      <p>:a changeable property or characteristic of some component of a program that can be set to different values.</p>
+      </div>
+      <li>Operators</li>
+       <p>: An operator is a special character (or characters) that indicates an action to be performed.</p>
+      <li>Variables</li>
+        <p>: Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.</p>
+      <li>Variable naming conventions</li>
+        <p>: a set of guidelines to follow when naming your variable.</p>
+      <li>Functions</li>
+        <p>:A function is a bundle of code that performs a set of procedures. </p>
+      <li>Methods</li>
+        <p>:  A method is a type of function. It is an action run on a piece of data; you can think of it as a message you send to a piece of data, and the result is the response.</p>
+      <li>Arguments</li>
+        <p>: Both functions and methods can have arguments. Arguments are passed into the parentheses ().</p>
+      <li>Parameters</li>
+        <p>: This is a placeholder variable that is included in a function definition. There is not value for parameters. Once the function is called, an argument is passed into the parameter and gives it a value.</p>
+      <li>Return</li>
+        <p>: The return value is the method's response.</p>
+      <li>Chaining methods</li>
+        <p>:is a programming strategy that simplifies and embellishes your code. It is a mechanism of calling a method on another method of the same object.</p>
+      <li>Strings</li>
+        <p>:is used for data values that are made up of ordered sequences of characters, such as "hello world". A string can contain any sequence of characters, visible or invisible, and characters may be repeated.</p>
+      li>Booleans</li>
+        <p>:a logical data type that can have only the values true or false . For example, in JavaScript, Boolean conditionals are often used to decide which sections of code to execute (such as in if statements) or repeat (such as in for loops).</p>
+      <li>Undefined</li>
+        <p>:a condition where an expression does not have a correct value, although it is syntactically correct. An undefined value must not be confused with empty string, Boolean "false" or other "empty" (but defined) values.</p>
+      <li>NaN</li>
+        <p>:an undefined or unrepresentable value, especially in floating-point calculations. For example, 0/0 or the square root of a negative number would return a NaN result.</p>
+      <li>Null</li>
+        <p>:Null is a built-in constant that has a value of zero. It is the same as the character 0 used to terminate strings in C. Null can also be the value of a pointer, which is the same as zero unless the CPU supports a special bit pattern for a null pointer.</p>
+      <li>Alert</li>
+        <p>:a type of "pop-up" message to users of a script. An alert could be anything from notifying the user of an error to saying a short phrase such as "Hi". </p>
+      <li>Comments</li>
+        <p>:a text note added to source code to provide explanatory information, usually about the function of the code.</p>
+      <li>jQuery</li>
+        <p>:a concise and fast JavaScript library that can be used to simplify event handling, HTML document traversing, Ajax interactions and animation for speedy website development. </p>
+      <li>Attributes</li>
+        <p>:a changeable property or characteristic of some component of a program that can be set to different values.</p>
   </ul>
 </body>
 </html>
