--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
   <title>Flashcard</title>
 </head>
 <body>
-  <div class="container">
+  <!-- <div class="container"> -->
     <h1>Click the JavaScript and JQuery terms below to learn their definitions.</h1>
     <ul>
       <div id="javascript-word">
-        <li><span class="clickable1"><strong>JavaScript(JS)</strong>,</span></li>
+        <li><span id="clickable1"><strong>JavaScript(JS)</strong></span></li>
       </div>
-      <div class="definition">
-        <p id="javascript-definition">: an object-oriented computer programming language commonly used to create interactive effects within web browsers.<span class="clickable1">Return to word</span></p>
-        <p id="operators-definition">: An operator is a special character (or characters) that indicates an action to be performed.<span class="clickable2">Return to word</span></p>
-        <p id="variables-definition">: Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.<span class="clickable3">Return to word</span></p>
+      <div id="javascript-definition">
+        <p>: an object-oriented computer programming language commonly used to create interactive effects within web browsers.<span id="clickable1">Return to word</span></p>
       </div>
       <div id="operators-word">
-        <li><span class="clickable2"><strong>Operators</strong>,</span></li>
+        <li><span id="clickable2"><strong>Operators</strong></span></li>
+      </div>
+      <div id="operators-definition">
+        <p>: An operator is a special character (or characters) that indicates an action to be performed.<span class="clickable">Return to word</span></p>
       </div>
       <div id="variables-word">
-        <li><span class="clickable3"><strong>Variables</strong>,</span></li>
+        <li><span id="clickable3"><strong>Variables</strong></span></li>
+      </div>
+      <div id="variables-definition">
+        <p>: Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.<span class="clickable">Return to word</span></p>
       </div>
       <div id="naming-word">
         <li>Variable naming conventions</li>
