--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <h1>Click the JavaScript and JQuery terms below to learn their definitions.</h1>
     <ul>
       <div id="javascript-word">
-        <li><span id="clickable1"><strong>JavaScript(JS)</strong></span></li>
+        <li><span class="clickable1"><strong>JavaScript(JS)</strong></span></li>
       </div>
       <div id="javascript-definition">
-        <p>: an object-oriented computer programming language commonly used to create interactive effects within web browsers.<span id="clickable1">Return to word</span></p>
+        <p>: an object-oriented computer programming language commonly used to create interactive effects within web browsers.<span class="clickable1">Return to word</span></p>
       </div>
       <div id="operators-word">
-        <li><span id="clickable2"><strong>Operators</strong></span></li>
+        <li><span class="clickable2"><strong>Operators</strong></span></li>
       </div>
       <div id="operators-definition">
-        <p>: An operator is a special character (or characters) that indicates an action to be performed.<span class="clickable">Return to word</span></p>
+        <p>: An operator is a special character (or characters) that indicates an action to be performed.<span class="clickable2">Return to word</span></p>
       </div>
       <div id="variables-word">
-        <li><span id="clickable3"><strong>Variables</strong></span></li>
+        <li><span class="clickable3"><strong>Variables</strong></span></li>
       </div>
       <div id="variables-definition">
-        <p>: Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.<span class="clickable">Return to word</span></p>
+        <p>: Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.<span class="clickable3">Return to word</span></p>
       </div>
-      <div id="naming-word">
+      <!-- <div id="naming-word">
         <li>Variable naming conventions</li>
       </div>
       <div id="naming-definition">
@@ -68,7 +68,7 @@
       <li>jQuery</li>
       <p>:a concise and fast JavaScript library that can be used to simplify event handling, HTML document traversing, Ajax interactions and animation for speedy website development. </p>
       <li>Attributes</li>
-      <p>:a changeable property or characteristic of some component of a program that can be set to different values.</p>
+      <p>:a changeable property or characteristic of some component of a program that can be set to different values.</p> -->
     </ul>
   </div>
 </body>
