add button for DOM practice - lesson 43

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <!-- <div class="container"> -->
-    <h1>Click the JavaScript and JQuery terms below to learn their definitions.</h1>
+    <button class="btn btn-primary" id="question">Interested?</button>
+    <ul id="user">
+    </ul>
+    <ul id="webpage">
+    </ul>
     <ul>
       <div id="javascript-word">
         <li><span class="clickable1"><strong>JavaScript(JS)</strong></span></li>
