WIP change flachcards styling to card from bootstrap

--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
   <title>Flashcard</title>
 </head>
 <body>
-  <!-- <div class="container"> -->
+  <div class="container">
     <button class="btn btn-primary" id="question">Interested?</button>
     <ul id="user">
     </ul>
     <ul id="webpage">
     </ul>
     <ul>
-      <div id="javascript-word">
-        <li><span class="clickable1"><strong>JavaScript(JS)</strong></span></li>
+      <div class="card" id="javascript-word">
+        <h1 class="card-title">Javascript</h1>
+        <p>Click <span class="clickable1">here</span> to read the definition.</p>
       </div>
-      <div id="javascript-definition">
-        <p>: an object-oriented computer programming language commonly used to create interactive effects within web browsers.<span class="clickable1">Return to word</span></p>
-      </div>
-      <div id="operators-word">
-        <li><span class="clickable2"><strong>Operators</strong></span></li>
+      <div class="card" id="javascript-definition">
+        <h2 class="card-body">: gnutjfeiongurjtiengjtkeirngtjbikrel. <span class="clickable1">Return to word</span></h2>
       </div>
       <div id="operators-definition">
         <p>: An operator is a special character (or characters) that indicates an action to be performed.<span class="clickable2">Return to word</span></p>
